# tm-plugin

./: .gitignore  Makefile  README.md
tm/: README.md  ffigen.yaml  pubspec.yaml
tm/example/: README.md  pubspec.yaml
tm/lib/: tm.dart
tm/test/: tm_method_channel_test.dart  tm_test.dart
tm_android/: .gitignore  Makefile  README.md  pubspec.yaml
tm_android/android/: .gitignore  build.gradle  settings.gradle
tm_android/example/: README.md  pubspec.yaml
tm_android/lib/: tm_android.dart
tm_android/pigeons/: messages.dart
tm_ios/: README.md  pubspec.yaml
tm_ios/example/: README.md  pubspec.yaml
tm_ios/ios/: tm_ios.podspec
tm_ios/lib/: tm_ios.dart
tm_ios/pigeons/: messages.dart
tm_ios/test/: tm_ios_method_channel_test.dart  tm_ios_test.dart
tm_linux/: .metadata  README.md  ffigen.yaml  pubspec.yaml
tm_linux/example/: README.md  pubspec.yaml
tm_linux/lib/: tm_linux.dart  tm_linux_bindings_generated.dart  tm_linux_process.dart
tm_linux/linux/: CMakeLists.txt
tm_linux/src/: CMakeLists.txt  tm_linux.c
tm_linux/test/: ensure_executable_test.dart  prepare_rpm_test.dart
tm_macos/: Makefile  README.md  pubspec.yaml
tm_macos/example/: README.md  pubspec.yaml
tm_macos/lib/: tm_macos.dart
tm_macos/macos/: tm_macos.podspec
tm_macos/pigeons/: messages.dart
tm_macos/test/: tm_macos_method_channel_test.dart
tm_platform_interface/: .flutter-plugins-dependencies  pubspec.yaml
tm_windows/: .gitignore  README.md  ffigen.yaml  makefile  pubspec.yaml
tm_windows/assets/: x.h
tm_windows/src/: CMakeLists.txt  tm_windows.c
(+268 files in other folders)
